force-app/main/default/objects/Payment_Request__c/Payment_Request__c.object-meta.xml
<CustomObject>
    <label>BT Payment Request</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Payment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Payment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>