force-app/main/default/objects/Payment_Request__c/fields/BT_Contractor_Invoice_PO__c.field-meta.xml
<CustomField>
    <fullName>BT_Contractor_Invoice_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Contractor Invoice (PO)</label>
    <referenceTo>Account_Payable__c</referenceTo>
    <relationshipLabel>BT Payment Requests</relationshipLabel>
    <relationshipName>BT_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>