force-app/main/default/objects/Payment_Request__c/fields/BT_Payable_Invoice_AP__c.field-meta.xml
<CustomField>
    <fullName>BT_Payable_Invoice_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Payable Invoice (AP)</label>
    <referenceTo>Account_Payable_Clone__c</referenceTo>
    <relationshipLabel>BT Payment Requests</relationshipLabel>
    <relationshipName>BT_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>