force-app/main/default/objects/Payment_Request__c/fields/BT_Payment_AP__c.field-meta.xml
<CustomField>
    <fullName>BT_Payment_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Payment (AP)</label>
    <referenceTo>BT_Payment__c</referenceTo>
    <relationshipLabel>BT Payment Requests</relationshipLabel>
    <relationshipName>BT_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>