force-app/main/default/objects/Payment_Request__c/fields/BT_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>BT_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>BT Payment Requests</relationshipLabel>
    <relationshipName>BT_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>